[package]
name = "ratatui-themekit"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
description = "Semantic theme system for ratatui — 20 color slots, 6 built-in themes, NO_COLOR support"
repository = "https://github.com/diegorodrigo90/ratatui-themekit"
homepage = "https://github.com/diegorodrigo90/ratatui-themekit"
documentation = "https://docs.rs/ratatui-themekit"
keywords = ["ratatui", "tui", "theme", "terminal", "colors"]
categories = ["command-line-interface"]
readme = "README.md"
authors = ["Diego Rodrigo <diegorodrigo90@gmail.com>"]

[dependencies]
ratatui = "0.30"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
