[package]
name = "ratatui-themekit"
version = "0.4.0"
edition = "2024"
rust-version = "1.86.0"
license = "MIT"
description = "Semantic theme system for ratatui — 11 themes, widget builders (Block, Line, Table, List, Tabs, StatusLine, Gauge), state-aware styles, NO_COLOR"
repository = "https://github.com/diegorodrigo90/ratatui-themekit"
homepage = "https://github.com/diegorodrigo90/ratatui-themekit"
documentation = "https://docs.rs/ratatui-themekit"
keywords = ["ratatui", "tui", "theme", "terminal", "colors"]
categories = ["command-line-interface"]
readme = "README.md"
authors = ["Diego Rodrigo <diegorodrigo90@gmail.com>"]
exclude = ["assets/", "scripts/", ".github/"]

[features]
default = []
serde = ["dep:serde", "ratatui/serde"]

[dependencies]
ratatui = "0.30"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
toml = "0.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
